// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform works for double transformation 1`] = `
Object {
  "code": "define('a-module', function () {
    a = 1;
});",
  "fileName": "test.t2.js",
  "map": Object {
    "file": "test.t2.js",
    "mappings": ";IAAAA,CAAAA,GAAW,CAAXA",
    "names": Array [
      "a",
    ],
    "sources": Array [
      "test.js",
      "test.t1.js",
    ],
    "sourcesContent": Array [
      "variable = 1",
      "a = 1;",
    ],
    "version": 3,
  },
}
`;

exports[`transform works for single transformation 1`] = `
Object {
  "code": "a = 1;",
  "fileName": "test.t1.js",
  "map": Object {
    "file": "test.t1.js",
    "mappings": "AAAAA,CAAA,GAAW,CAAX",
    "names": Array [
      "a",
    ],
    "sources": Array [
      "test.js",
    ],
    "sourcesContent": Array [
      "variable = 1",
    ],
    "version": 3,
  },
}
`;

exports[`wrapModule wraps module with dependencies 1`] = `
Object {
  "code": "Liferay.Loader.define('a/module/name', [
    'module',
    'require',
    'a/dependency',
    'another/dependency'
], function (module, require) {
    var a = require('a/dependency');
    var another = require('another/dependency');
    console.log('Hello world');
});",
  "fileName": "a/module/name.amd.js",
  "map": Object {
    "file": "a/module/name.amd.js",
    "mappings": ";;;;;;IACE,IAAIA,CAAA,GAAIC,OAAA,CAAQ,cAAR,CAAR,C;IACA,IAAIC,OAAA,GAAUD,OAAA,CAAQ,oBAAR,CAAd,C;IAEAE,OAAA,CAAQC,GAAR,CAAY,aAAZ,E",
    "names": Array [
      "a",
      "require",
      "another",
      "console",
      "log",
    ],
    "sources": Array [
      "a/module/name.js",
    ],
    "sourcesContent": Array [
      "
		var a = require('a/dependency');
		var another = require('another/dependency');

		console.log('Hello world');
		",
    ],
    "version": 3,
  },
}
`;

exports[`wrapModule wraps module without dependencies 1`] = `
Object {
  "code": "Liferay.Loader.define('a/module/name', [
    'module',
    'require'
], function (module, require) {
    console.log('Hello world');
});",
  "fileName": "a/module/name.amd.js",
  "map": Object {
    "file": "a/module/name.amd.js",
    "mappings": ";;;;IACEA,OAAA,CAAQC,GAAR,CAAY,aAAZ,E",
    "names": Array [
      "console",
      "log",
    ],
    "sources": Array [
      "a/module/name.js",
    ],
    "sourcesContent": Array [
      "
		console.log('Hello world');
		",
    ],
    "version": 3,
  },
}
`;
